Fixed issue with overflow of datagrid.

--- a/css/dashboard/gui.scss
+++ b/css/dashboard/gui.scss
@@ -188,6 +188,7 @@ body {
     background-color: #fff;
     box-shadow: 0 0.46875rem 2.1875rem rgba(4, 9, 20, 0.03), 0 0.9375rem 1.40625rem rgba(4, 9, 20, 0.03), 0 0.25rem 0.53125rem rgba(4, 9, 20, 0.05), 0 0.125rem 0.1875rem rgba(4, 9, 20, 0.03);
     background-clip: border-box;
+    overflow: auto;
 }
 
 .hd-component img {
